--- a/index.html
+++ b/index.html
@@ -35,6 +35,31 @@
         f.addEventListener('submit', submitted);
       </script>
 
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCl9f_dAgpLl8VudoQ71gMTcRONuHWcwiU",
+    authDomain: "spec-checker-62b30.firebaseapp.com",
+    projectId: "spec-checker-62b30",
+    storageBucket: "spec-checker-62b30.appspot.com",
+    messagingSenderId: "80361919518",
+    appId: "1:80361919518:web:659c7c60c01acef6058a0f",
+    measurementId: "G-HBKHV7E2TT"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+  // Top of Firebase Scripts
+</script> 
+
 </body>
 
 </html>
